# drf-auth

./: README.md  docker-compose.yml  pyproject.toml
games/: models.py  urls.py  views.py
games/migrations/: 0001_initial.py
games_project/: settings.py  urls.py
